--- a/classes/CN_Group_Send_To_SAP_LC_Ctrl.cls
+++ b/classes/CN_Group_Send_To_SAP_LC_Ctrl.cls
@@ -114,11 +114,15 @@ public without sharing class CN_Group_Send_To_SAP_LC_Ctrl {
                 throw new AuraHandledException( e.getMessage());   
             }
         }else{
+            if(String.isBlank(groupToSend.CN_Group_Code__c) && group_result.CN_Group_Code__c !=null && String.isNotBlank(group_result.CN_Group_Code__c)){
+                groupCode = group_result.CN_Group_Code__c;
+            }
             CN_Group__c groupToUpdate = new CN_Group__c(
                     Id = groupToSend.Id,
                     CN_Sync_Status__c = Constants.CN_BU_SYNC_STATUS_FAIL,   
                     CN_Sync_Time__c = Datetime.now(),
-                    CN_Sync_Error_Message__c = errorMessage
+                    CN_Sync_Error_Message__c = errorMessage,
+                	CN_Group_Code__c = String.isBlank(groupCode)? groupToSend.CN_Group_Code__c: groupCode
             );
             try{
                 update groupToUpdate;
@@ -151,7 +155,7 @@ public without sharing class CN_Group_Send_To_SAP_LC_Ctrl {
         JSONGenerator gen = JSON.createGenerator(false);
         gen.writeStartObject();
         gen.writeStringField('Name',group_select.Name);
-        gen.writeStringField('CN_Up_Code__c',group_select.CN_Group_Code__c);
+        gen.writeStringField('CN_Up_Code__c',group_select.CN_Group_Code__c == null? '':group_select.CN_Group_Code__c);
         gen.writeStringField('CN_Parent_Up_Code__c', group_select.CN_Sales_Team_Code__c);
         gen.writeStringField('CN_City_API__c',group_select.CN_City_API__c);
         gen.writeEndObject();
@@ -159,6 +163,7 @@ public without sharing class CN_Group_Send_To_SAP_LC_Ctrl {
 
         String authorizationHeader = 'Basic ' + EncodingUtil.base64Encode(headerValue);
         request.setHeader('Authorization', authorizationHeader);
+        request.setHeader('Content-Type', 'application/json');
         request.setMethod('POST');
         request.setBody(gen.getAsString());
         request.setTimeout(120000);
@@ -174,7 +179,7 @@ public without sharing class CN_Group_Send_To_SAP_LC_Ctrl {
                 errorMsg = resultMap.containsKey('CN_Sync_Error_Message__c')? (String)resultMap.get('CN_Sync_Error_Message__c'): '';
                 if(resultMap.containsKey('CN_Sync_Status__c')) {
                     String resultStatus = (String)resultMap.get('CN_Sync_Status__c');
-                    if('Success'.equals(resultStatus)) {
+                    if('S'.equals(resultStatus)) {
                         
                         isSendSuccess = true;
                         if(resultMap.containsKey('CN_Up_Code__c')) {
@@ -183,8 +188,14 @@ public without sharing class CN_Group_Send_To_SAP_LC_Ctrl {
                             grp.CN_Group_Code__c = null;
                         }
                         grp.CN_Sync_Time__c = Datetime.now();
-                    } else if('FAIL'.equals(resultStatus) || String.isBlank(resultStatus)) {
-                        throw new CustomException(errorMsg);
+                    } else if('E'.equals(resultStatus) || String.isBlank(resultStatus)) {
+                        if(resultMap.containsKey('CN_Up_Code__c')) {
+                            if(resultMap.get('CN_Up_Code__c') != null) {
+                            	grp.CN_Group_Code__c = (String)resultMap.get('CN_Up_Code__c');
+                            }
+                        } else {
+                        	throw new CustomException(errorMsg);
+                        }
                     } else {
                         throw new CustomException(errorMsg);
                     }
