--- a/classes/CN_Sales_Order_Send_LC_Ctrl_Test.cls
+++ b/classes/CN_Sales_Order_Send_LC_Ctrl_Test.cls
@@ -73,7 +73,7 @@ private class CN_Sales_Order_Send_LC_Ctrl_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
@@ -186,7 +186,7 @@ private class CN_Sales_Order_Send_LC_Ctrl_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
@@ -299,7 +299,7 @@ private class CN_Sales_Order_Send_LC_Ctrl_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
@@ -412,7 +412,7 @@ private class CN_Sales_Order_Send_LC_Ctrl_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
@@ -525,7 +525,7 @@ private class CN_Sales_Order_Send_LC_Ctrl_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
@@ -637,7 +637,7 @@ private class CN_Sales_Order_Send_LC_Ctrl_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
@@ -750,7 +750,7 @@ private class CN_Sales_Order_Send_LC_Ctrl_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
