--- a/classes/TestDataFactory.cls
+++ b/classes/TestDataFactory.cls
@@ -322,7 +322,7 @@ public class TestDataFactory {
                 acc.CN_Store_Name_EN__c = 'TestAccount';
                 acc.CN_Store_Name_CN__c = 'TestAccount';
                 acc.CN_Sales_District__c = '001';
-                acc.CN_Customer_Group__c = '01';
+                //acc.CN_Customer_Group__c = '01';
                 acc.CN_Category__c = 'BAPA';
                 acc.CN_Subcategory__c = 'Access Bakery';
                 acc.CN_Province_CN__c = province.Id;
