--- a/classes/CN_CR_Check_Fields_Change_Handler_Test.cls
+++ b/classes/CN_CR_Check_Fields_Change_Handler_Test.cls
@@ -59,7 +59,7 @@ private class CN_CR_Check_Fields_Change_Handler_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
@@ -85,7 +85,7 @@ private class CN_CR_Check_Fields_Change_Handler_Test {
             acc_second.CN_Store_Name_EN__c = '测试二';
             acc_second.CN_Store_Name_CN__c = '测试二';
             acc_second.CN_Sales_District__c = '001';
-            acc_second.CN_Customer_Group__c = '01';
+            //acc_second.CN_Customer_Group__c = '01';
             acc_second.CN_Category__c = 'BAPA';
             acc_second.CN_Subcategory__c = 'Access Bakery';
             acc_second.CN_Province_CN__c = province.Id;
