--- a/classes/CN_CR_Prevent_Delete_Handler_Test.cls
+++ b/classes/CN_CR_Prevent_Delete_Handler_Test.cls
@@ -53,7 +53,7 @@ public class CN_CR_Prevent_Delete_Handler_Test {
             acc.CN_Store_Name_EN__c = 'TestClass_Account';
             acc.CN_Store_Name_CN__c = 'TestClass_Account';
             acc.CN_Sales_District__c = '001';
-            acc.CN_Customer_Group__c = '01';
+            //acc.CN_Customer_Group__c = '01';
             acc.CN_Category__c = 'BAPA';
             acc.CN_Subcategory__c = 'Access Bakery';
             acc.CN_Province_CN__c = province.Id;
